--- a/app/src/main/res/layout/activity_goodsdetailed.xml
+++ b/app/src/main/res/layout/activity_goodsdetailed.xml
@@ -17,14 +17,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- viewpager로 바꿀부분 -->
             <ImageView
-                android:id="@+id/goods_images"
-                android:layout_width="350dp"
-                android:layout_height="350dp"
+                android:id="@+id/goods_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/ic_launcher_foreground" />
+                android:src="@color/white"/>
 
             <TextView
                 android:id="@+id/goods_name"
@@ -71,12 +69,18 @@
                 android:textColor="@color/black"
                 android:textSize="13sp" />
 
-            <ImageView
-                android:id="@+id/goods_map"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_margin="10dp"
-                app:srcCompat="@drawable/ic_launcher_foreground" />
+            <TextView
+                android:id="@+id/goods_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"/>
+
+<!--            <ImageView-->
+<!--                android:id="@+id/goods_map"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="200dp"-->
+<!--                android:layout_margin="10dp"-->
+<!--                app:srcCompat="@drawable/ic_launcher_foreground" />-->
 
 
 
