--- a/app/src/main/res/layout/activity_seeprofile.xml
+++ b/app/src/main/res/layout/activity_seeprofile.xml
@@ -1,141 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="30sp"
-    android:paddingTop="20sp"
-    android:orientation="vertical"
-    tools:context=".AddItemActivity">
-
-    <TextView
-        android:id="@+id/user_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
-        android:gravity="clip_vertical"
-        android:hint="@string/name"
-        android:shadowColor="#BD87BB"
-        tools:ignore="TextContrastCheck" />
-
-    <TextView
-        android:id="@+id/student_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
-        android:hint="@string/inputIdnum"
-        tools:ignore="TextContrastCheck" />
-
-    <TextView
-        android:id="@+id/phone_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
-        android:hint="@string/phoneNumber"
-        tools:ignore="TextContrastCheck" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:hint="@string/PW"
-        tools:ignore="TextContrastCheck" />
-
-    <EditText
-        android:id="@+id/newPW"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
-        android:hint="@string/newPW"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        tools:ignore="TextContrastCheck"
-        android:importantForAutofill="no" />
-
-    <EditText
-        android:id="@+id/checkPW"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
-        android:hint="@string/checkPW"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        tools:ignore="TextContrastCheck" />
-
-    <Button
-        android:id="@+id/changePW"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:backgroundTint="#EABADB"
-        android:text="@string/editBtn" />
-
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp">
+        android:layout_margin="30sp"
+        android:paddingTop="20sp"
+        android:orientation="vertical"
+        tools:context=".AddItemActivity">
 
-        <ImageButton
-            android:id="@+id/selectImageBtn"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_margin="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:contentDescription="@string/camera"
-            android:padding="5dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/camera" />
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:gravity="clip_vertical"
+            android:hint="@string/name"
+            android:shadowColor="#BD87BB"
+            tools:ignore="TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/student_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:hint="@string/inputIdnum"
+            tools:ignore="TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/phone_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:hint="@string/phoneNumber"
+            tools:ignore="TextContrastCheck" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:hint="@string/PW"
+            tools:ignore="TextContrastCheck" />
+
+        <EditText
+            android:id="@+id/newPW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:hint="@string/newPW"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            tools:ignore="TextContrastCheck"
+            android:importantForAutofill="no" />
+
+        <EditText
+            android:id="@+id/checkPW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:hint="@string/checkPW"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            tools:ignore="TextContrastCheck" />
+
+        <Button
+            android:id="@+id/changePW"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:backgroundTint="#EABADB"
+            android:text="@string/editBtn" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
+            android:layout_marginVertical="10dp">
+
+            <ImageButton
+                android:id="@+id/selectImageBtn"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_margin="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/white"
+                android:contentDescription="@string/camera"
+                android:padding="5dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/camera" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/editTextTextMultiLine4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="start|top"
+                    android:text="@string/notice"
+                    android:textSize="15sp" />
+
+                <Button
+                    android:id="@+id/registerAdminBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#EABADB"
+                    android:text="@string/registerAdminBtn"
+                    tools:ignore="TextContrastCheck" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/editTextTextMultiLine4"
-                android:layout_width="match_parent"
+                android:id="@+id/logout"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="start|top"
-                android:text="@string/notice"
-                android:textSize="15sp" />
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="65dp"
+                android:text="@string/logout"/>
 
-            <Button
-                android:id="@+id/registerAdminBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#EABADB"
-                android:text="@string/registerAdminBtn"
-                tools:ignore="TextContrastCheck" />
-        </LinearLayout>
+            <TextView
+                android:id="@+id/withdraw"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="65dp"
+                android:text="@string/withdraw" />
+
+        </RelativeLayout>
+
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginStart="65dp"
-            android:text="@string/logout"/>
-
-        <TextView
-            android:id="@+id/withdraw"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="65dp"
-            android:text="@string/withdraw" />
-
-    </RelativeLayout>
-
-
-
-</LinearLayout>
+</ScrollView>
