--- a/app/src/main/res/layout/activity_userpage.xml
+++ b/app/src/main/res/layout/activity_userpage.xml
@@ -16,11 +16,18 @@
         android:text="개인 정보 확인/수정"
         android:textColor="@color/black"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
+        android:text="* 아래 메뉴는 인증된 이용자만 사용 가능합니다*"/>
+
     <Button
         android:id="@+id/goods_posting"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:backgroundTint="#FEDFE5"
+        android:backgroundTint="#EBB0D1"
         android:text="상품 게시글 등록"
         android:textColor="@color/black"/>
 
@@ -28,8 +35,8 @@
         android:id="@+id/promotion_posting"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:backgroundTint="#FEDFE5"
-        android:text="부스 홍보 게시글 등록"
+        android:backgroundTint="#EBB0D1"
+        android:text=" 부스 홍보 게시글 등록"
         android:textColor="@color/black"/>
 
     <Button
@@ -38,7 +45,7 @@
         android:layout_height="60dp"
         android:backgroundTint="#EBB0D1"
         android:clickable="true"
-        android:text="(판매자)등록 상품 관리"
+        android:text="등록 상품 관리"
         android:textColor="@color/black" />
 
 </LinearLayout>
