--- a/app/src/main/res/layout/activity_addpromotion.xml
+++ b/app/src/main/res/layout/activity_addpromotion.xml
@@ -10,6 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="450dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="20dp"
         android:orientation="vertical">
 
         <ImageButton
