--- a/app/src/main/res/layout/activity_goodsdetailed.xml
+++ b/app/src/main/res/layout/activity_goodsdetailed.xml
@@ -71,7 +71,7 @@
 
             <TextView
                 android:id="@+id/goods_detail"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:background="@drawable/textbox_pink"/>
